# ComfyUI_Bxb

./: .gitignore  README.md  __init__.py  install.py  mime.py  public.py  pyproject.toml  requirements.txt  utils.py  wss.py
assets/: SD变现宝示例工作流.json
huise_admin/: index.html  input.js
huise_admin/assets/: index.js
web/: index.js  web.js
