[project]
name = "comfyui_bxb"
description = "sdBxb, a tool that converts ComfyUI workflows into WeChat Mini Program, Douyin Mini Program, and H5 with one click, and supports payments."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/zhulu111/ComfyUI_Bxb"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Bxb"
Icon = ""
